# gp-selector

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  GPSelectorPrefs.txt  README.md  build.cmd  build.sh
.github/workflows/: build.yaml
cmake/: dependencies.cmake  juce-shared-library.cmake
src/: Constants.h  ExtensionWindow.cpp  ExtensionWindow.h  IconPaths.h  LibMain.cpp  LibMain.h  LogWindow.cpp  LogWindow.h  LookAndFeel.h  Timer.h
